[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gretel-code-synth"
version = "0.1.0"
authors = [
  { name="Gretel", email="info@gretel.ai" },
]
description = "Generate synthetic code examples from Jupyter notebooks using Gretel AI"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "gretel-client",
]

[project.urls]
"Homepage" = "https://github.com/gretelai/gretel-code-synth"
"Bug Tracker" = "https://github.com/gretelai/gretel-code-synth/issues"
